cabal-version:      2.4
name:               reflex-indexedDB
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             tuesta
maintainer:         tuesta@proton.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:   Reflex.IndexedDB

  -- Modules included in this library but not exported.
  other-modules:     Reflex.IndexedDB.Base
                   , Reflex.IndexedDB.Class

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:       base
                     , aeson
                     , mtl
                     , stm
                     , text
                     , time
                     , reflex-dom-core
                     , reflex
                     , containers
                     , primitive
                     , ref-tf
                     , monad-control

                     , ghcjs-dom
                     , jsaddle

  ghc-options:      -Wall
  hs-source-dirs:   lib
  default-language: Haskell2010
